// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Validate solution 1 1`] = `
Uint8Array [
  8,
  16,
  115,
  119,
  97,
  112,
  76,
  109,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  95,
  115,
  116,
  101,
  108,
  108,
  97,
  115,
  119,
  97,
  112,
  32,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  32,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  168,
  48,
  120,
  70,
  102,
  70,
  70,
  102,
  70,
  102,
  102,
  49,
  70,
  99,
  97,
  67,
  66,
  100,
  50,
  49,
  56,
  69,
  68,
  99,
  48,
  69,
  98,
  65,
  50,
  48,
  70,
  99,
  50,
  51,
  48,
  56,
  67,
  55,
  55,
  56,
  48,
  56,
  48,
  168,
  48,
  120,
  70,
  70,
  70,
  102,
  70,
  102,
  70,
  102,
  54,
  51,
  100,
  50,
  52,
  101,
  67,
  99,
  56,
  101,
  66,
  56,
  97,
  55,
  98,
  53,
  68,
  48,
  56,
  48,
  51,
  101,
  57,
  48,
  48,
  70,
  55,
  98,
  54,
  99,
  69,
  68,
  24,
  98,
  114,
  105,
  100,
  103,
  101,
  96,
  109,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  95,
  98,
  114,
  105,
  100,
  103,
  101,
  95,
  116,
  111,
  95,
  112,
  104,
  97,
  108,
  97,
  32,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  20,
  80,
  104,
  97,
  108,
  97,
  168,
  48,
  120,
  70,
  70,
  70,
  102,
  70,
  102,
  70,
  102,
  54,
  51,
  100,
  50,
  52,
  101,
  67,
  99,
  56,
  101,
  66,
  56,
  97,
  55,
  98,
  53,
  68,
  48,
  56,
  48,
  51,
  101,
  57,
  48,
  48,
  70,
  55,
  98,
  54,
  99,
  69,
  68,
  24,
  48,
  120,
  48,
  48,
  48,
  48,
]
`;

exports[`Validate solution 2 1`] = `
Uint8Array [
  4,
  32,
  98,
  114,
  105,
  100,
  103,
  101,
  95,
  97,
  96,
  109,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  95,
  98,
  114,
  105,
  100,
  103,
  101,
  95,
  116,
  111,
  95,
  112,
  104,
  97,
  108,
  97,
  40,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  95,
  97,
  28,
  80,
  104,
  97,
  108,
  97,
  95,
  97,
  176,
  48,
  120,
  70,
  70,
  70,
  102,
  70,
  102,
  70,
  102,
  54,
  51,
  100,
  50,
  52,
  101,
  67,
  99,
  56,
  101,
  66,
  56,
  97,
  55,
  98,
  53,
  68,
  48,
  56,
  48,
  51,
  101,
  57,
  48,
  48,
  70,
  55,
  98,
  54,
  99,
  69,
  68,
  95,
  97,
  32,
  48,
  120,
  48,
  48,
  48,
  48,
  95,
  97,
]
`;

exports[`Validate solution 3 1`] = `
Uint8Array [
  4,
  24,
  98,
  114,
  105,
  100,
  103,
  101,
  96,
  109,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  95,
  98,
  114,
  105,
  100,
  103,
  101,
  95,
  116,
  111,
  95,
  112,
  104,
  97,
  108,
  97,
  32,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  32,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  168,
  48,
  120,
  70,
  70,
  70,
  102,
  70,
  102,
  70,
  102,
  54,
  51,
  100,
  50,
  52,
  101,
  67,
  99,
  56,
  101,
  66,
  56,
  97,
  55,
  98,
  53,
  68,
  48,
  56,
  48,
  51,
  101,
  57,
  48,
  48,
  70,
  55,
  98,
  54,
  99,
  69,
  68,
  24,
  48,
  120,
  48,
  48,
  48,
  48,
]
`;

exports[`Validate solution 4 1`] = `
Uint8Array [
  4,
  16,
  115,
  119,
  97,
  112,
  96,
  109,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  95,
  98,
  114,
  105,
  100,
  103,
  101,
  95,
  116,
  111,
  95,
  112,
  104,
  97,
  108,
  97,
  32,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  32,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  168,
  48,
  120,
  70,
  70,
  70,
  102,
  70,
  102,
  70,
  102,
  54,
  51,
  100,
  50,
  52,
  101,
  67,
  99,
  56,
  101,
  66,
  56,
  97,
  55,
  98,
  53,
  68,
  48,
  56,
  48,
  51,
  101,
  57,
  48,
  48,
  70,
  55,
  98,
  54,
  99,
  69,
  68,
  168,
  48,
  120,
  70,
  70,
  70,
  102,
  70,
  102,
  70,
  102,
  54,
  51,
  100,
  50,
  52,
  101,
  67,
  99,
  56,
  101,
  66,
  56,
  97,
  55,
  98,
  53,
  68,
  48,
  56,
  48,
  51,
  101,
  57,
  48,
  48,
  70,
  55,
  98,
  54,
  99,
  69,
  68,
]
`;

exports[`Validate solution 5 1`] = `
Uint8Array [
  4,
  16,
  115,
  119,
  97,
  112,
  96,
  109,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  95,
  98,
  114,
  105,
  100,
  103,
  101,
  95,
  116,
  111,
  95,
  112,
  104,
  97,
  108,
  97,
  32,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  20,
  80,
  104,
  97,
  108,
  97,
  168,
  48,
  120,
  70,
  70,
  70,
  102,
  70,
  102,
  70,
  102,
  54,
  51,
  100,
  50,
  52,
  101,
  67,
  99,
  56,
  101,
  66,
  56,
  97,
  55,
  98,
  53,
  68,
  48,
  56,
  48,
  51,
  101,
  57,
  48,
  48,
  70,
  55,
  98,
  54,
  99,
  69,
  68,
  24,
  48,
  120,
  48,
  48,
  48,
  48,
]
`;

exports[`Validate solution 6 1`] = `
Uint8Array [
  8,
  16,
  115,
  119,
  97,
  112,
  76,
  109,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  95,
  115,
  116,
  101,
  108,
  108,
  97,
  115,
  119,
  97,
  112,
  32,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  32,
  77,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  168,
  48,
  120,
  70,
  102,
  70,
  70,
  102,
  70,
  102,
  102,
  49,
  70,
  99,
  97,
  67,
  66,
  100,
  50,
  49,
  56,
  69,
  68,
  99,
  48,
  69,
  98,
  65,
  50,
  48,
  70,
  99,
  50,
  51,
  48,
  56,
  67,
  55,
  55,
  56,
  48,
  56,
  48,
  168,
  48,
  120,
  70,
  70,
  70,
  102,
  70,
  102,
  70,
  102,
  54,
  51,
  100,
  50,
  52,
  101,
  67,
  99,
  56,
  101,
  66,
  56,
  97,
  55,
  98,
  53,
  68,
  48,
  56,
  48,
  51,
  101,
  57,
  48,
  48,
  70,
  55,
  98,
  54,
  99,
  69,
  68,
  24,
  98,
  114,
  105,
  100,
  103,
  101,
  96,
  109,
  111,
  111,
  110,
  98,
  101,
  97,
  109,
  95,
  98,
  114,
  105,
  100,
  103,
  101,
  95,
  116,
  111,
  95,
  112,
  104,
  97,
  108,
  97,
  20,
  75,
  104,
  97,
  108,
  97,
  20,
  80,
  104,
  97,
  108,
  97,
  168,
  48,
  120,
  70,
  70,
  70,
  102,
  70,
  102,
  70,
  102,
  54,
  51,
  100,
  50,
  52,
  101,
  67,
  99,
  56,
  101,
  66,
  56,
  97,
  55,
  98,
  53,
  68,
  48,
  56,
  48,
  51,
  101,
  57,
  48,
  48,
  70,
  55,
  98,
  54,
  99,
  69,
  68,
  24,
  48,
  120,
  48,
  48,
  48,
  48,
]
`;
